namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ns1
spec: {}
status: {}
