pod-using-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-pod1
spec:
  containers:
  - name: app-container
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
    volumeMounts:
    - mountPath: "/tmp/data"
      name: test-volume
  volumes:
  - name: test-volume
    persistentVolumeClaim:
      claimName: roopapvc
