pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod1 
  name: app1
spec:
  containers:
  - image: adikarthik/app1
    name: abc
    ports:
    - containerPort: 9090
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
