probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: probe-pod-roopa
  labels:
    app: probe-demo
spec:
  containers:
  - name: probe-container
    image: nginx:1.25.2
    ports:
    - containerPort: 80
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 10
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 3
      periodSeconds: 5
