simple-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo-pod
  labels:
    app: secret-demo
spec:
  containers:
    - name: secret-demo-container
      image: nginx:latest
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/secret
          readOnly: true
  volumes:
    - name: secret-volume
      secret:
        secretName: simple-secret
