ngnixIngress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80           # Service port inside the cluster
      targetPort: 80     # Container port
      nodePort: 30001    # Exposed port on the host machine (optional, Minikube will also auto-assign if omitted)
  type: NodePort        # Expose the service via NodePort
