nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app1 
  name: app1 
spec:
  ports:
  - name: 9090-9090
    port: 9090
    protocol: TCP
    targetPort: 9090
	nodePort: 30001
  selector:
    app: demo
  type: NodePort
status:
  loadBalancer: {}
