np-ngnix.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-servicenp
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007  # Expose the service on port 30007
  type: NodePort     # Expose the service externally
