Ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /nginx/
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /demo/
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 80
